# prato-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  program
demo/: CMakeLists.txt
demo/include/: game-state.hpp
demo/src/: demo.cpp  game-state.cpp
docs/: index.md
engine/include/: asset-manager.hpp  game-data.hpp  game.hpp  generic-state.hpp  input-manager.hpp  state-handler.hpp  state.hpp
engine/include/game/: game.hpp
engine/include/imgui/: imconfig.h
engine/include/state/: state-handler.hpp
engine/include/states/: game-state.hpp  menu-state.hpp  pause-state.hpp  splash-state.hpp
engine/src/: asset-manager.cpp  game.cpp  input-manager.cpp  state-handler.cpp
engine/src/asset-manager/: asset-manager.cpp
engine/src/game/: game.cpp
engine/src/input-manager/: input-manager.cpp
engine/src/state/: state-handler.cpp
engine/src/states/: game-state.cpp  menu-state.cpp  pause-state.cpp  splash-state.cpp
include/: asset-manager.hpp  definitions.hpp  input-manager.hpp
include/states/: debug-state.hpp  game-state.hpp  menu-state.hpp  pause-state.hpp  splash-state.hpp
src/: game.cpp  main.cpp
src/states/: debug-state.cpp  game-state.cpp  menu-state.cpp  pause-state.cpp  splash-state.cpp
